<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="03dp"
    android:background="@drawable/bg_color"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_Siguiente"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="08dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#F4B700"
        android:text="@string/btn_siguinte"
        android:textColor="@color/black"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/browser_actions_bg_grey" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toStartOf="@+id/textVision"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_logo" />
    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/color_divider"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Pastor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/pastor"
            android:backgroundTint="#040303"
            style="?attr/materialButtonOutlinedStyle"
            android:textColor="@color/white"
            app:cornerRadius="20dp"
            app:strokeColor="@color/browser_actions_bg_grey" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Pastora"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#040303"
            android:text="@string/pastora"
            android:textColor="@color/white"
            app:cornerRadius="20dp"
            app:strokeColor="@color/browser_actions_bg_grey" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Ministros"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="#040303"
            android:text="@string/ministro"
            android:textColor="@color/white"
            app:cornerRadius="20dp"
            app:strokeColor="@color/browser_actions_bg_grey" />

    </LinearLayout>
    <View
        android:id="@+id/divider5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/color_divider"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_la_vision"
        android:textColor="@color/white"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintBottom_toTopOf="@+id/textVision"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textVision"
        android:layout_width="261dp"
        android:layout_height="121dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="20sp"
        android:text="@string/textview_vision"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="407dp"
        android:layout_height="169dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:elevation="20sp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/imagePastor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:paddingBottom="70dp"
            app:srcCompat="@drawable/img_pastor" />

        <ImageView
            android:id="@+id/imagePastora"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:paddingBottom="70dp"
            app:srcCompat="@drawable/img_pastora" />

        <ImageView
            android:id="@+id/imageMinistro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:paddingBottom="70dp"
            app:srcCompat="@drawable/img_ministros" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/color_divider"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <Button
            android:id="@+id/btn_Discipulado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/btn_discipulado"
            android:textColor="@color/white"
            app:cornerRadius="20dp"
            android:backgroundTint="#040303"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/browser_actions_bg_grey"/>

        <Button
            android:id="@+id/btn_Facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:layout_weight="1"
            android:text="@string/btn_facebook"
            android:textColor="@color/white"
            app:cornerRadius="20dp"
            android:backgroundTint="#040303"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/browser_actions_bg_grey"/>

        <Button
            android:id="@+id/btn_Alavanzas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/btn_alabanzas"
            android:textColor="@color/white"
            app:cornerRadius="20dp"
            android:backgroundTint="#040303"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/browser_actions_bg_grey" />

    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/color_divider"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="412dp"
        android:layout_height="179dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:layout_weight="1"
            app:srcCompat="@drawable/img_logo" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:layout_weight="1"
            app:srcCompat="@drawable/img_facebook" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:layout_weight="1"
            app:srcCompat="@drawable/img_diario" />

    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/color_divider"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">


        <Button
            android:id="@+id/btn_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:importantForAccessibility="no"
            android:text="@string/video"
            android:textColor="@color/white"
            app:cornerRadius="20dp"
            android:backgroundTint="#040303"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/browser_actions_bg_grey"/>

        <Button
            android:id="@+id/btn_Diario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:importantForAccessibility="no"
            android:text="@string/diario"
            android:textColor="@color/white"
            app:cornerRadius="20dp"
            android:backgroundTint="#040303"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/browser_actions_bg_grey"/>

        <Button
            android:id="@+id/btn_biblia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:importantForAccessibility="no"
            android:text="@string/biblia"
            android:textColor="@color/white"
            app:cornerRadius="20dp"
            android:backgroundTint="#040303"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/browser_actions_bg_grey"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>